test/functions/bradc/arrayFormals/formalDomainChecks.compopts
  # formalDomainChecks.good
--no-formal-domain-checks  # formalDomainChecks-off.good
--no-checks                # formalDomainChecks-off.good
--fast                     # formalDomainChecks-off.good
